--- a/ChatMessRyb/Windows/SearchForColleaguesWindow.xaml
+++ b/ChatMessRyb/Windows/SearchForColleaguesWindow.xaml
@@ -5,8 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ChatMessRyb.Windows"
         mc:Ignorable="d"
-        Title="SearchForColleaguesWindow" Height="450" Width="800">
+        Title="SearchForColleaguesWindow" Height="500" Width="450" WindowStartupLocation="CenterScreen">
     <Grid>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+        </Grid.RowDefinitions>
         
+        
+
     </Grid>
 </Window>
